# spot-edge-webui

./: .claudeignore  .gitignore  CLAUDE.md  README.md  radio_receiver.py  radio_sender.py  tmux_session.sh  zenoh_client.sh  zenoh_host.sh  zenoh_router_config.json5
src/far_planner/: README.md
src/far_planner/src/far_planner/: CMakeLists.txt
src/far_planner/src/far_planner/config/: default.yaml
src/far_planner/src/far_planner/include/far_planner/: far_planner.h
src/far_planner/src/far_planner/launch/: far_planner.launch.py
src/far_planner/src/far_planner/rviz/: mine.rviz
src/far_planner/src/far_planner/src/: far_planner.cpp
src/far_planner/src/graph_decoder/launch/: decoder.launch.py
src/far_planner/src/graph_decoder/src/: decoder_node.cpp
src/fast_lio/: .gitignore  CMakeLists.txt  package.xml
src/fast_lio/config/: goals.yaml  velodyne_vlp16.yaml
src/fast_lio/include/: common_lib.h  localization.h
src/fast_lio/launch/: localization.launch.py  mapping.launch.py
src/fast_lio/log/: plot.py
src/fast_lio/rviz/: fastlio.rviz  localization.rviz
src/fast_lio/scripts/: publish_goals.py
src/fast_lio/src/: laserMapping.cpp  localization.cpp  preprocess.cpp  preprocess.h
src/lidar_web_bridge/: package.xml  setup.cfg  setup.py
src/lidar_web_bridge/lidar_web_bridge/: lidar_stream_node.py  point_cloud_utils.py
src/mpl_planner/: CMakeLists.txt  README.md  package.xml
src/mpl_planner/include/mpl_planner/: debug_visualizer.hpp  local_planner.hpp  local_planner_node.hpp  map_server.h  ompl_planner_node.hpp  path_loader.hpp  planner_core.hpp
src/mpl_planner/launch/: mpl_planner.launch.py  ompl_nav.launch.py
src/mpl_planner/rviz/: nav.rviz
src/mpl_planner/src/: debug_visualizer.cpp  local_planner.cpp  map_server.cc  ompl_planner_node.cpp  path_loader.cpp  planner_core.cpp  regulated_pure_pursuit_controller.cpp
src/mpl_planner/src/motion_pregen/: path_generation.py  pregen_path_start.txt  pregen_voxel_path_corr.txt
src/ndt_localization/: CMakeLists.txt  package.xml
src/ndt_localization/config/: localization.yaml
src/ndt_localization/include/: localization.h
src/ndt_localization/launch/: localization.launch.py
src/ndt_localization/src/: localization.cpp
src/owon_driver/: CMakeLists.txt  package.xml
src/owon_driver/src/: owon_node.cpp
src/spot_navigation/: .gitignore  package.xml  setup.py  target_locations.txt
src/spot_navigation/config/: 99-spot-serial.rules  VLP16-velodyne_driver_node-params.yaml  VLP16-velodyne_transform_node-params.yaml  VLP32C-velodyne_driver_node-params.yaml  VLP32C-velodyne_transform_node-params.yaml  far_planner.yaml  lio_localization.yaml
src/spot_navigation/launch/: far_planner.launch.py  lidar_stream.launch.py  lio_localization.launch.py  lio_slam.launch.py  sensors.launch.py  velodyne.VLP32C.launch.py
src/spot_navigation/metrics/: benchmark_results.csv
src/spot_navigation/rviz/: localization.rviz  mission_log.rviz  mission_replay.rviz  navigation.rviz  spot.rviz
src/spot_navigation/scripts/: benchmark.py  grid_geodesic.py
src/spot_navigation/spot_navigation/: pcd_to_boundary.py  radio_bridge.py  route_manager.py
src/spot_ros2_driver/: .gitignore  .pre-commit-config.yaml  Dockerfile.l4t  README.md  requirements.txt  ruff.toml
src/spot_ros2_driver/spot_action/: CMakeLists.txt  package.xml
src/spot_ros2_driver/spot_action/action/: MoveRelativeXY.action
src/spot_ros2_driver/spot_driver/: package.xml  setup.py
src/spot_ros2_driver/spot_driver/config/: spot.rviz
src/spot_ros2_driver/spot_driver/launch/: spot_driver.launch.py
src/spot_ros2_driver/spot_driver/spot_driver/: __init__.py  spot_commander.py  spot_driver.py  spot_image.py  spot_streams.py  spot_tf.py
src/terrain_analysis/: CMakeLists.txt  package.xml
src/terrain_analysis/config/: terrain_analysis.yaml
src/terrain_analysis/include/terrain_analysis/: terrain_processor.h
src/terrain_analysis/launch/: terrain_processor.launch.py
src/terrain_analysis/rviz/: terrain_analysis.rviz
src/terrain_analysis/src/: terrain_processor.cpp
src/velodyne/.github/workflows/: basic-build-ci.yaml
src/velodyne/velodyne_pointcloud/: CMakeLists.txt  package.xml
src/wit_ros2_imu/: configure_imu.py
src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: LidarViewer.tsx  PointCloud.tsx
web/hooks/: useLidarStream.ts
web/lib/: constants.ts  parsePointCloud.ts
