<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="spot@todo.todo">spot</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>far_planner</exec_depend>
  <exec_depend>boundary_handler</exec_depend>
  <exec_depend>graph_decoder</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mpl_planner</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ndt_localization</exec_depend>
  <exec_depend>owon_driver</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>terrain_analysis</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>wit_ros2_imu</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
